# ModelPLP

./: .gitignore  Readme.md  main.ipynb  main.py  pyproject.toml
Imagenes/: Readme.md
miscelania/: consultas.py  graficas.py  herramientas.py
modelos/: modelo_regresion.py
src/: cohortes.py  miscelania.py  peticiones.py  plp.py  usoBBDD.py
