[project]
name = "ModelPLP"
version = "0.1"
description = "Model PLP"
authors = [
    {name = "julianPrieto1323", email = "julian.prieto1323@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "duckdb>=1.1.0",
    "orjson>=3.10.7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
